--- a/Code/index.html
+++ b/Code/index.html
@@ -19,17 +19,17 @@
             <h1>  Perros aleatorios </h1>
             <article>
                 <img id="img1" alt="Fotos de perros aleatorias">
-                <button> Guardar perro en favoritos </button>
+                <button id="btn1" > Guardar perro en favoritos </button>
             </article>
 
             <article>
                 <img id="img2" alt="Fotos de perros aleatorias">
-                <button> Guardar perro en favoritos </button>
+                <button id="btn2" > Guardar perro en favoritos </button>
             </article>
 
             <article>
                 <img id="img3" alt="Fotos de perros aleatorias">
-                <button> Guardar perro en favoritos </button>
+                <button id="btn3" > Guardar perro en favoritos </button>
             </article>
 
         </section>
