--- a/Code/index.html
+++ b/Code/index.html
@@ -35,11 +35,19 @@
         </section>
 
         <section id="favoritesDog">
-            <h1>  Perros favoritos </h1>
+            <!-- <h1>  Perros favoritos </h1>
             <article>
                 <img id="img4" alt="Fotos de perros aleatorias">
                 <button> Sacar perro de favoritos </button>
-            </article>
+            </article> -->
+        </section>
+
+        <section id="uploadingDog">
+            <h2> Sube la foto de tu perro </h2>
+            <form id="uploadingForm">
+                <input id="file" type="file" name="file">
+                <button type="button" onclick="uploadPhoto()"> Subir foto de Perro </button>
+            </form>
         </section>
 
     </main>
